--- a/imp_homework_on_swift/imp_homework_on_swift/Base.lproj/Main.storyboard
+++ b/imp_homework_on_swift/imp_homework_on_swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="abG-8t-OAs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="urP-aE-Bzy">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -21,13 +21,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GI0-lY-nLc" userLabel="Content Scroll View">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                        <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="suW-RP-SxM" userLabel="Content View">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="nh7-cs-SoS" userLabel="Button Stack View">
-                                                        <rect key="frame" x="0.0" y="619" width="414" height="117"/>
+                                                        <rect key="frame" x="0.0" y="663" width="414" height="117"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gV-FK-U0Q" customClass="StyledButton" customModule="imp_homework_on_swift" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
@@ -182,14 +182,14 @@
                                     <constraint firstItem="GI0-lY-nLc" firstAttribute="top" secondItem="19B-bI-OHo" secondAttribute="top" id="ydb-FI-243"/>
                                 </constraints>
                             </view>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M83-1p-gMd" userLabel="Content Scroll View">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M83-1p-gMd" userLabel="Content Scroll View">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zkJ-Vb-W6L" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="JL8-no-Uch" userLabel="Button Stack View">
-                                                <rect key="frame" x="0.0" y="619" width="414" height="117"/>
+                                                <rect key="frame" x="0.0" y="663" width="414" height="117"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAq-5W-eAZ" customClass="StyledButton" customModule="imp_homework_on_swift" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="51"/>
@@ -323,12 +323,12 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="bottom" secondItem="Zyo-IL-Pae" secondAttribute="bottom" id="5Qz-B0-xSz"/>
-                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="leading" secondItem="Zyo-IL-Pae" secondAttribute="leading" id="Dl5-fl-Jnp"/>
-                                    <constraint firstAttribute="bottom" secondItem="zkJ-Vb-W6L" secondAttribute="bottom" id="IeA-gi-Jge"/>
-                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="centerX" secondItem="M83-1p-gMd" secondAttribute="centerX" id="QEd-Mu-o8v"/>
-                                    <constraint firstAttribute="trailing" secondItem="zkJ-Vb-W6L" secondAttribute="trailing" id="ff1-Gr-TOw"/>
-                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="top" secondItem="Zyo-IL-Pae" secondAttribute="top" id="hU9-Hd-ZOG"/>
+                                    <constraint firstItem="Zyo-IL-Pae" firstAttribute="width" secondItem="zkJ-Vb-W6L" secondAttribute="width" id="Keh-EH-bx4"/>
+                                    <constraint firstItem="RbV-se-n9K" firstAttribute="leading" secondItem="zkJ-Vb-W6L" secondAttribute="leading" id="Z0Q-K1-6RO"/>
+                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="trailing" secondItem="RbV-se-n9K" secondAttribute="trailing" id="ajM-x9-gj4"/>
+                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="bottom" secondItem="RbV-se-n9K" secondAttribute="bottom" constant="818" id="aoi-FS-NzM"/>
+                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="height" secondItem="Zyo-IL-Pae" secondAttribute="height" id="fc8-6V-NbP"/>
+                                    <constraint firstItem="zkJ-Vb-W6L" firstAttribute="top" secondItem="RbV-se-n9K" secondAttribute="top" id="wRU-oW-ogU"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="RbV-se-n9K"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="Zyo-IL-Pae"/>
@@ -704,10 +704,9 @@
         <!--Navigation Controller-->
         <scene sceneID="hAa-71-2tr">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="urP-aE-Bzy" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" navigationBarHidden="YES" id="urP-aE-Bzy" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yG5-ZC-1SE">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
