--- a/imp_homework_on_swift/imp_homework_on_swift/Views/Planet/PlanetTableViewCell.xib
+++ b/imp_homework_on_swift/imp_homework_on_swift/Views/Planet/PlanetTableViewCell.xib
@@ -8,45 +8,43 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" rowHeight="96" id="zZZ-45-wH5" customClass="PlanetTableViewCell" customModule="imp_homework_on_swift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="402" height="96"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="0.0" rowHeight="72" id="zZZ-45-wH5" customClass="PlanetTableViewCell" customModule="imp_homework_on_swift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="402" height="72"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zZZ-45-wH5" id="kS9-Af-3hF">
-                <rect key="frame" x="0.0" y="0.0" width="402" height="96"/>
+                <rect key="frame" x="0.0" y="0.0" width="402" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QS-iC-Sva" userLabel="Location Label">
-                        <rect key="frame" x="20" y="26" width="191" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zaw-6N-fk3" userLabel="Population Label">
-                        <rect key="frame" x="238" y="-46" width="86" height="188"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jNb-fu-MNN" userLabel="Type Location Label">
-                        <rect key="frame" x="20" y="55" width="191" height="14"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="TiB-aA-bz5">
+                        <rect key="frame" x="20" y="11" width="382" height="41"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QS-iC-Sva" userLabel="Location Label">
+                                <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jNb-fu-MNN" userLabel="Type Location Label">
+                                <rect key="frame" x="0.0" y="20.5" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zaw-6N-fk3" userLabel="Population Label">
+                        <rect key="frame" x="274" y="11" width="52" height="50"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="7QS-iC-Sva" secondAttribute="trailing" constant="191" id="23T-4X-Yce"/>
-                    <constraint firstItem="Zaw-6N-fk3" firstAttribute="top" secondItem="kS9-Af-3hF" secondAttribute="topMargin" constant="-57" id="44g-ru-27A"/>
-                    <constraint firstItem="7QS-iC-Sva" firstAttribute="top" secondItem="kS9-Af-3hF" secondAttribute="top" constant="26" id="9OR-5R-Nqh"/>
-                    <constraint firstItem="Zaw-6N-fk3" firstAttribute="leading" secondItem="kS9-Af-3hF" secondAttribute="leading" constant="238" id="UR2-y8-hB8"/>
-                    <constraint firstAttribute="trailing" secondItem="Zaw-6N-fk3" secondAttribute="trailing" constant="78" id="Vmk-MY-scF"/>
-                    <constraint firstItem="jNb-fu-MNN" firstAttribute="top" secondItem="kS9-Af-3hF" secondAttribute="top" constant="55" id="YJL-Gk-qFW"/>
-                    <constraint firstItem="Zaw-6N-fk3" firstAttribute="centerY" secondItem="kS9-Af-3hF" secondAttribute="centerY" id="dD6-FY-CUr"/>
-                    <constraint firstAttribute="trailing" secondItem="jNb-fu-MNN" secondAttribute="trailing" constant="191" id="eRt-QD-tUW"/>
-                    <constraint firstItem="jNb-fu-MNN" firstAttribute="leading" secondItem="kS9-Af-3hF" secondAttribute="leading" constant="20" symbolic="YES" id="esK-Hi-uYb"/>
-                    <constraint firstAttribute="bottom" secondItem="7QS-iC-Sva" secondAttribute="bottom" constant="49" id="hsU-PE-JoL"/>
-                    <constraint firstAttribute="bottom" secondItem="jNb-fu-MNN" secondAttribute="bottom" constant="27" id="mNK-mL-DKZ"/>
-                    <constraint firstItem="7QS-iC-Sva" firstAttribute="leading" secondItem="kS9-Af-3hF" secondAttribute="leading" constant="20" symbolic="YES" id="wai-uC-J08"/>
+                    <constraint firstAttribute="trailing" secondItem="TiB-aA-bz5" secondAttribute="trailing" id="Q07-M9-bhr"/>
+                    <constraint firstItem="TiB-aA-bz5" firstAttribute="leading" secondItem="kS9-Af-3hF" secondAttribute="leading" constant="20" symbolic="YES" id="UXE-lo-AyV"/>
+                    <constraint firstAttribute="bottom" secondItem="TiB-aA-bz5" secondAttribute="bottom" constant="20" symbolic="YES" id="kO9-Yl-Vvo"/>
+                    <constraint firstItem="TiB-aA-bz5" firstAttribute="top" secondItem="kS9-Af-3hF" secondAttribute="top" constant="11" id="rb2-9D-VyW"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -54,7 +52,7 @@
                 <outlet property="PopulationLabel" destination="Zaw-6N-fk3" id="6Ue-ck-Rup"/>
                 <outlet property="TypeLocationLabel" destination="jNb-fu-MNN" id="2SV-Qf-Q4C"/>
             </connections>
-            <point key="canvasLocation" x="230.43478260869566" y="36.160714285714285"/>
+            <point key="canvasLocation" x="-246.37681159420291" y="22.767857142857142"/>
         </tableViewCell>
     </objects>
 </document>
