--- a/imp_homework_on_swift/imp_homework_on_swift/Base.lproj/Main.storyboard
+++ b/imp_homework_on_swift/imp_homework_on_swift/Base.lproj/Main.storyboard
@@ -190,11 +190,11 @@
             </objects>
             <point key="canvasLocation" x="866.66666666666674" y="63.616071428571423"/>
         </scene>
-        <!--Item-->
+        <!--Выбор планеты-->
         <scene sceneID="ZAD-tJ-KIq">
             <objects>
                 <navigationController id="dH2-GI-eEd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="planet" selectedImage="planet" id="7rI-KV-NsA"/>
+                    <tabBarItem key="tabBarItem" title="Выбор планеты" image="planet" selectedImage="planet" id="7rI-KV-NsA"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Ky-z8-3x4">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -265,7 +265,7 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RuU-Cq-K4Q">
-                                                    <rect key="frame" x="0.0" y="0.0" width="116" height="129"/>
+                                                    <rect key="frame" x="0.0" y="10" width="116" height="109"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rms-J1-hJf" customClass="StyledRoundedImage" customModule="imp_homework_on_swift" customModuleProvider="target">
                                                             <rect key="frame" x="26" y="0.0" width="64" height="64"/>
@@ -273,14 +273,17 @@
                                                                 <constraint firstAttribute="width" secondItem="rms-J1-hJf" secondAttribute="height" multiplier="1:1" id="doW-Kt-3aO"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgj-oZ-gd1">
-                                                            <rect key="frame" x="39.5" y="64" width="37.5" height="50.5"/>
+                                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="KBd-Mu-zSU">
+                                                            <rect key="frame" x="48" y="64" width="20" height="20"/>
+                                                        </activityIndicatorView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgj-oZ-gd1">
+                                                            <rect key="frame" x="39.5" y="84" width="37.5" height="18"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-KC-KtA">
-                                                            <rect key="frame" x="42.5" y="114.5" width="31" height="14.5"/>
+                                                            <rect key="frame" x="42.5" y="102" width="31" height="7"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -289,19 +292,19 @@
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="rms-J1-hJf" secondAttribute="trailing" constant="26" id="Rv3-JX-vjC"/>
                                                         <constraint firstItem="rms-J1-hJf" firstAttribute="leading" secondItem="RuU-Cq-K4Q" secondAttribute="leading" constant="26" id="Wck-3O-7qw"/>
-                                                        <constraint firstItem="rms-J1-hJf" firstAttribute="top" secondItem="RuU-Cq-K4Q" secondAttribute="top" constant="10" id="ewL-7G-dIh"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="RuU-Cq-K4Q" firstAttribute="top" secondItem="dDk-XQ-OAv" secondAttribute="top" id="1HS-VF-JZw"/>
-                                                <constraint firstAttribute="bottom" secondItem="RuU-Cq-K4Q" secondAttribute="bottom" id="OFZ-pz-CGM"/>
+                                                <constraint firstItem="RuU-Cq-K4Q" firstAttribute="top" secondItem="dDk-XQ-OAv" secondAttribute="top" constant="10" id="1HS-VF-JZw"/>
+                                                <constraint firstAttribute="bottom" secondItem="RuU-Cq-K4Q" secondAttribute="bottom" constant="10" id="OFZ-pz-CGM"/>
                                                 <constraint firstAttribute="trailing" secondItem="RuU-Cq-K4Q" secondAttribute="trailing" id="Xwl-fr-f7r"/>
                                                 <constraint firstItem="RuU-Cq-K4Q" firstAttribute="leading" secondItem="dDk-XQ-OAv" secondAttribute="leading" id="ey4-8O-LmI"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="116" height="129"/>
                                         <connections>
+                                            <outlet property="activityIndicator" destination="KBd-Mu-zSU" id="jcJ-3t-0j7"/>
                                             <outlet property="characterImage" destination="rms-J1-hJf" id="zQS-7u-rNl"/>
                                             <outlet property="genderLabel" destination="RfM-KC-KtA" id="cnH-uf-F2I"/>
                                             <outlet property="nameLabel" destination="sgj-oZ-gd1" id="eev-Hn-lTc"/>
@@ -338,11 +341,11 @@
             </objects>
             <point key="canvasLocation" x="2372" y="1430"/>
         </scene>
-        <!--Item-->
+        <!--Профиль-->
         <scene sceneID="Fku-fx-gP9">
             <objects>
                 <navigationController id="UrQ-K6-WUa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="profile" selectedImage="profile" id="Ma5-lg-efg"/>
+                    <tabBarItem key="tabBarItem" title="Профиль" image="profile" selectedImage="profile" id="Ma5-lg-efg"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MLf-u4-Px5">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
